--- a/dl.cfg
+++ b/dl.cfg
@@ -5,5 +5,5 @@ AWS_SECRET_ACCESS_KEY= *******************************************
 
 [SOURCE_DATA]
 
-LOG_DATA_DIR='s3://udacity-dend/log_data'
-SONG_DATA_DIR='s3://udacity-dend/song_data'
+LOG_DATA_DIR='s3://*********/log_data'
+SONG_DATA_DIR='s3://********/song_data'
